welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var A:Int=nums.lenght
  
  for (n<-nums){
    n=n+n(-1)
  }
  return n/A
}